# SuperControl

./: .gitignore  SuperControl.sln  项目时序图.mdj
SControlClient/: ClientController.cpp  ClientController.h  ClientSocket.h  Common.cpp  Common.h  DownLoadFileDlg.cpp  DownLoadFileDlg.h  FileMangerDlg.cpp  FileMangerDlg.h  MQueue.h  MThread.cpp  MThread.h  MToolbar.cpp  MToolbar.h  Request.cpp  Request.h  SControlClient.aps  SControlClient.cpp  SControlClient.h  SControlClient.rc  SControlClient.vcxproj  SControlClientDlg.cpp  SControlClientDlg.h  ScreenWatch.cpp  ScreenWatch.h  Tool.h  UDPPassClient.cpp  UDPPassClient.h  UserInfoDlg.cpp  UserInfoDlg.h  resource.h
SControlNetWork/: CMakeLists.txt  Common.h  MSocket.cpp  MSocket.h  MThread.h  SControlNetWork.vcxproj  UDPPassNetWork.cpp  UDPPassNetWork.h  main.cpp
SControlServer/: CmdProcessor.cpp  CmdProcessor.h  Common.cpp  Common.h  IocpServer.cpp  IocpServer.h  LockMachineDlg.cpp  LockMachineDlg.h  MQueue.h  MThread.h  SControlServer.aps  SControlServer.cpp  SControlServer.vcxproj  SThreadPool.cpp  SThreadPool.h  Screenshot.cpp  Screenshot.h  ServerSocket.cpp  ServerSocket.h  Tool.h  UDPPassServer.cpp  UDPPassServer.h  framework.h  resource.h
